...
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent=".5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_details_title"
        style="@style/DetailsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
...
        app:layout_constraintEnd_toEndOf="@id/tv_details_title"
        app:layout_constraintStart_toStartOf="@id/tv_details_title"
        app:layout_constraintTop_toBottomOf="@id/tv_details_title"
        tools:text="2018" />

    <ImageView
        android:id="@+id/iv_details_poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/cd_poster"
...
