<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_go_to_favorites"
        android:icon="@drawable/ic_favorite_fill"
        android:title="@string/menu_favorites"
        app:showAsAction="always" />

</menu>